02.Post con ng-repeat

--- a/site/index.html
+++ b/site/index.html
@@ -6,8 +6,8 @@
 </head>
 <body ng-app="reeditgam" 
 	ng-controller="mainCtrl">
-	<div>
-		{{test}}
+	<div ng-repeat="post in posts">
+		{{post}}
 	</div>
 	<!-- Cargando Librerias -->
 	<!-- Es buena practica al final -->
