--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 <body ng-app="reeditgam" 
 	ng-controller="mainCtrl">
 	<div ng-repeat="post in posts">
-		{{post}}
+	{{post.title}} - Likes: {{post.upvotes}}
 	</div>
 	<!-- Cargando Librerias -->
 	<!-- Es buena practica al final -->
