--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,8 @@
 </head>
 <body ng-app="reeditgam" 
 	ng-controller="mainCtrl">
-	<div ng-repeat="post in posts">
+		<button ng-click="addPost()">Postear</button>
+	<div ng-repeat="post in posts | orderBy: '-upvotes'">
 	{{post.title}} - Likes: {{post.upvotes}}
 	</div>
 	<!-- Cargando Librerias -->
