--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,13 @@
 </head>
 <body ng-app="reeditgam" 
 	ng-controller="mainCtrl">
-		<button ng-click="addPost()">Postear</button>
+	
+		<!--CREANDO UN FORMULARIO-->
+		 <form ng-submit="addPost()"> 
+          <input type="text" ng-model="title">
+          <button type="submit">Publicar</button>
+		</form>
+
 	<div ng-repeat="post in posts | orderBy: '-upvotes'">
 	{{post.title}} - Likes: {{post.upvotes}}
 	</div>
