--- a/site/index.html
+++ b/site/index.html
@@ -8,13 +8,32 @@
 	ng-controller="mainCtrl">
 	
 		<!--CREANDO UN FORMULARIO-->
-		 <form ng-submit="addPost()"> 
+		  <form  ng-submit="addPost()"> 
+		 	<!--INPUTODEL TITULO -->
           <input type="text" ng-model="title">
+          <link rel="stylesheet"
+           href="./vendor/bootstrap/css/bootstrap.css">
+           <style>
+            .glyphicon-thumbs-up {cursor: pointer;}
+           </style>
+          <br>
+          <!--INPUT DEL LINK -->
+          <input type_"text" ng-model="link">
+          <br>
           <button type="submit">Publicar</button>
+         
 		</form>
 
 	<div ng-repeat="post in posts | orderBy: '-upvotes'">
-	{{post.title}} - Likes: {{post.upvotes}}
+		<span ng-click="incrementUpvotes(post)">*</span>
+		<!--Agregando los links-->
+		<a ng-show ="post.link" href="{{post.link}}">
+		     {{post.title}}
+		</a>
+		<span ng-hide="post.link">
+			 {{post.title}}
+		</span>
+            - Likes: {{post.upvotes}}
 	</div>
 	<!-- Cargando Librerias -->
 	<!-- Es buena practica al final -->
